# snake-game-sdl2

./: .gitignore  CMakeLists.txt  README.md
design/: button_quit.ase  button_restart.ase  button_resume.ase
design/help_state/: help.ase
design/start_menu_state/: button_exit.ase  button_help.ase  button_start.ase  logo.ase
src/: CMakeLists.txt  apple.cpp  apple.hpp  fps_handler.cpp  fps_handler.hpp  game.cpp  game.hpp  game_state.hpp  help_state.cpp  help_state.hpp  input_handler.cpp  input_handler.hpp  loss_state.cpp  loss_state.hpp  main.cpp  menu_button.cpp  menu_button.hpp  monitor.cpp  monitor.hpp  pause_state.cpp  pause_state.hpp  play_state.cpp  play_state.hpp  playground.cpp  playground.hpp  snake.cpp  snake.hpp  start_menu_state.cpp  start_menu_state.hpp  state_manager.cpp  state_manager.hpp  win_state.cpp  win_state.hpp
